# documentation.neural_networks

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yaml
docs/: index.md
docs/data/: ex_2.ipynb  ex_3.ipynb
docs/exercicios/dados/: dados.ipynb  main.md
docs/exercicios/mpl/: mlp.ipynb
docs/exercicios/perceptron/: ex_1.ipynb  perceptron.ipynb
docs/exercicios/perceptron/utils/: perceptron.py
docs/exercicios/vae/: vae.ipynb
docs/exercises/dados/: dados.ipynb  ex_3.ipynb
docs/exercises/data/: dados.ipynb  ex_1.ipynb  main.md
docs/javascripts/: mathjax.js
docs/projetos/: index.md
docs/stylesheets/: overrides.css
exercicios/dados/dados/: dados.ipynb  index.html
exercicios/dados/main/: index.html
exercicios/mpl/mlp/: index.html
exercicios/mpl/utils/mlp/: index.html  mlp.py
exercicios/perceptron/ex_1/: index.html
exercicios/perceptron/perceptron/: index.html  perceptron.ipynb
exercicios/perceptron/utils/perceptron/: index.html  perceptron.py
exercicios/vae/vae/: index.html
javascripts/: katex.js
projetos/: index.html
search/: search_index.json
