[project]
name = "redes-neurais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
]

[project.optional-dependencies]
docs-all = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-material-extensions>=1.3",
  "pymdown-extensions>=10.8",
  "markdown-exec>=1.7",
  "markdown-grid-tables>=0.4",
  "mkdocs-glightbox>=0.4",
  "mkdocs-macros-plugin>=1.0",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-redirects~=1.2",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-git-authors-plugin>=0.9",
  "mkdocs-git-committers-plugin-2>=2.5",
  "mkdocs-badges>=0.5.0",
  "mkdocs-render-swagger-plugin>=0.0.5",
]
