[project]
name = "redes-neurais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "markdown-exec>=1.11.0",
    "matplotlib>=3.10.5",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.18",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pymdown-extensions>=10.16.1",
    "scikit-learn>=1.7.1",
    
    # núcleo
    "mkdocs>=1.6", # gerador estático do site
    "mkdocs-material>=9.5", # tema Material
    "mkdocs-material-extensions>=1.3", # p/ material.extensions.*
    "pymdown-extensions>=10.8", # p/ recursos avançados de Markdown
    
    # notebooks
    "mkdocs-jupyter>=0.24", # renderiza .ipynb como páginas
    
    # plugins já vistos no seu YAML/logs
    "markdown-exec>=1.7", # plugin p/ executar blocos
    "markdown-grid-tables>=0.4", # extensão markdown_grid_tables
    "mkdocs-glightbox>=0.4", # lightbox p/ imagens
    "mkdocs-badges>=0.4", # badges
    "mkdocs-render-swagger-plugin>=0.0.5", # Swagger/OpenAPI
    "mkdocs-redirects~=1.2", # redirecionamentos (última 1.2.2)
    "mkdocs-git-authors-plugin>=0.9", # autores por página (git blame)
    "mkdocs-git-committers-plugin-2>=2.5", # lista de contribuidores
    "termynal>=0.11", # terminais animados (plugin termynal)
    "mkdocs-git-revision-date-localized-plugin>=1.4",
    "mkdocs-minify-plugin>=0.8",
    "tensorflow>=2.20.0",
]

[project.optional-dependencies]
docs-all = [
  # núcleo
  "mkdocs>=1.6",                         # gerador estático do site
  "mkdocs-material>=9.5",                # tema Material
  "mkdocs-material-extensions>=1.3",     # p/ material.extensions.*
  "pymdown-extensions>=10.8",            # p/ recursos avançados de Markdown

  # notebooks
  "mkdocs-jupyter>=0.24",                # renderiza .ipynb como páginas
  # (opcional) se quiser editar/parear .py<->.ipynb:
  # "jupytext>=1.16",

  # plugins já vistos no seu YAML/logs
  "markdown-exec>=1.7",                  # plugin p/ executar blocos
  "markdown-grid-tables>=0.4",           # extensão markdown_grid_tables
  "mkdocs-glightbox>=0.4",               # lightbox p/ imagens
  "mkdocs-badges>=0.4",                  # badges
  "mkdocs-render-swagger-plugin>=0.0.5", # Swagger/OpenAPI
  "mkdocs-redirects~=1.2",               # redirecionamentos (última 1.2.2)
  "mkdocs-git-authors-plugin>=0.9",      # autores por página (git blame)
  "mkdocs-git-committers-plugin-2>=2.5", # lista de contribuidores
  "termynal>=0.11",                      # terminais animados (plugin termynal)
  "mkdocs-git-revision-date-localized-plugin>=1.4",
  "mkdocs-minify-plugin>=0.8",
]
